cudaq/test/Transforms/CliffordTSynthesis/value_semantics_error.qke
// ========================================================================== //
// Copyright (c) 2026 NVIDIA Corporation & Affiliates.                        //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //


// RUN: cudaq-opt --clifford-t-synthesis='epsilon=1e-3' \
// RUN:   -verify-diagnostics %s

// A rotation in value-semantics (wire) form must be rejected with a diagnostic
// pointing at the `regtomem` pass, since this pass only handles memory
// semantics (!quake.ref).

func.func @value_sem() {
  %0 = quake.null_wire
  %a = arith.constant 0.7853981633974483 : f64
  // expected-error @+1 {{rotation target is in value-semantics}}
  %1 = quake.rz (%a) %0 : (f64, !quake.wire) -> !quake.wire
  return
}
